--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,19 +1,19 @@
 
-
-spring:
-  data:
-    neo4j:
-      username: neo4j
-      password: 123456
-      uri: bolt://10.243.146.211:7687
-
-    elasticsearch:
-      client:
-        reactive:
-          endpoints: 10.243.147.88:9200
-#          username: elastic
-#          password: changeme
-  elasticsearch:
-    rest:
-      uris: http://10.243.147.88:9200
+#
+#spring:
+#  data:
+#    neo4j:
+#      username: neo4j
+#      password: 123456
+#      uri: bolt://10.243.146.211:7687
+#
+#    elasticsearch:
+#      client:
+#        reactive:
+#          endpoints: 10.243.147.88:9200
+##          username: elastic
+##          password: changeme
+#  elasticsearch:
+#    rest:
+#      uris: http://10.243.147.88:9200
 
